v2.4.x/site/en/tutorials/tutorials-overview.md
---
id: tutorials-overview.md
summary: This page provides a list of tutorials for you to interact with Milvus.
title: Tutorials Overview
---

# Tutorials Overview

This page provides a list of tutorials for you to interact with Milvus.

| Tutorial | Use Case | Related Milvus Features | 
| -------- | -------- | --------- |
| [Build RAG with Milvus](build-rag-with-milvus.md) |  RAG | vector search |
| [Multimodal RAG with Milvus](multimodal_rag_with_milvus.md) | RAG | vector search, dynamic field |
| [Image Search with Milvus](image_similarity_search.md) | Semantic Search | vector search, dynamic field |
| [Hybrid Search with Milvus](hybrid_search_with_milvus.md) | Hybrid Search | hybrid search, multi vector, dense embedding, sparse embedding |
| [Multimodal Search using Multi Vectors](multimodal_rag_with_milvus.md) | Semantic Search | multi vector, hybrid search |
| [Question Answering System](question_answering_system.md) | Question Answering | vector search |
| [Recommender System](recommendation_system.md) | Recommendation System | vector search |
| [Video Similarity Search](video_similarity_search.md) | Semantic Search | vector search |
| [Audio Similarity Search](audio_similarity_search.md) | Semantic Search | vector search |
| [DNA Classification](dna_sequence_classification.md) | Classification | vector search |
| [Text Search Engine](text_search_engine.md) | Semantic Search | vector search |
| [Search Image by Text](text_image_search.md) | Semantic Search | vector search |
| [Image Deduplication](image_deduplication_system.md) | Deduplication | vector search |
| [Graph RAG with Milvus](graph_rag_with_milvus.md) | RAG | graph search |
| [Contextual Retrieval with Milvus](contextual_retrieval_with_milvus.md) | Quickstart | vector search |
| [HDBSCAN Clustering with Milvus](hdbscan_clustering_with_milvus.md) | Quickstart | vector search |
| [Use ColPali for Multi-Modal Retrieval with Milvus](use_ColPali_with_milvus.md) | Quickstart | vector search |
| [Vector Visualization](vector_visualization.md) | Quickstart | vector search |
| [Movie Recommendation with Milvus](movie_recommendation_with_milvus.md) | Recommendation System | vector search |
| [Funnel Search with Matryoshka Embeddings](funnel_search_with_matryoshka.md) | Quickstart | vector search |

